--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
       position: absolute; 
       top: 0; z-index: 1000; width: 100%;
       background: #ffffff;
-      transition: all 0.4s ease-in-out;
+      transition: transform 0.4s ease-in-out, box-shadow 0.4s;
     }
 
-    /* 내릴 때 나타남 */
+    /* 스크롤 시 변신: 스르륵 내려와서 고정 */
     .sticky-top.scrolled {
       position: fixed;
       transform: translateY(0);
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      animation: slideDown 0.4s ease-out;
+      /* 올릴 때 사라지지 않게 하려고 nav-hide 관련 애니메이션 제거 */
     }
 
-    /* 올릴 때 숨김 */
-    .sticky-top.nav-hide {
-      transform: translateY(-100%);
+    /* 페이지 최상단이 아닐 때 나타나는 애니메이션 */
+    .slide-in {
+      animation: slideDown 0.4s ease-out forwards;
     }
 
     @keyframes slideDown {
@@ -114,29 +114,28 @@
       if(nav) nav.classList.toggle('active');
     }
 
-    window.addEventListener('scroll', () => {
+    document.addEventListener('DOMContentLoaded', () => {
       const header = document.getElementById('mainHeader');
       const btn = document.getElementById('fixedTopBtn');
-      if(!header || !btn) return;
 
-      const currentScroll = window.pageYOffset;
-      const lastScroll = window.lastScroll || 0;
+      window.addEventListener('scroll', () => {
+        const currentScroll = window.pageYOffset;
 
-      // TOP 버튼 노출
-      btn.style.display = (currentScroll > 150) ? 'block' : 'none';
+        // TOP 버튼 노출
+        if(btn) btn.style.display = (currentScroll > 150) ? 'block' : 'none';
 
-      // 마우스 내릴 때 나타나고, 올릴 때 숨기는 로직
-      if (currentScroll > 50) {
-        if (currentScroll > lastScroll) {
-          header.classList.remove('nav-hide');
-          header.classList.add('scrolled');
-        } else {
-          header.classList.add('nav-hide');
+        if(header) {
+          if (currentScroll > 80) {
+            // 내리기 시작하면 스르륵 나타나서 "계속 유지"
+            if (!header.classList.contains('scrolled')) {
+              header.classList.add('scrolled', 'slide-in');
+            }
+          } else if (currentScroll <= 10) {
+            // 끝까지 올렸을 때만 원래 자리로
+            header.classList.remove('scrolled', 'slide-in');
+          }
         }
-      } else {
-        header.classList.remove('scrolled', 'nav-hide');
-      }
-      window.lastScroll = currentScroll;
+      });
     });
 
     function scrollToTop() {
