--- a/index.html
+++ b/index.html
@@ -24,12 +24,19 @@
     }
     * { box-sizing: border-box; }
 
+    /* [헤더 지지대] 배너가 위아래로 흔들리지 않게 잡아주는 역할 */
+    .header-placeholder {
+      height: 120px; /* 헤더의 총 높이 */
+      width: 100%;
+      background: white;
+    }
+
     /* [헤더 설정] */
     .sticky-top {
       position: absolute; 
       top: 0; z-index: 1000; width: 100%;
       background: #ffffff;
-      transition: transform 0.4s ease-in-out, box-shadow 0.4s;
+      transition: transform 0.4s ease-in-out;
     }
 
     /* 스크롤 시 변신: 스르륵 내려와서 고정 */
@@ -37,10 +44,9 @@
       position: fixed;
       transform: translateY(0);
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      /* 올릴 때 사라지지 않게 하려고 nav-hide 관련 애니메이션 제거 */
     }
 
-    /* 페이지 최상단이 아닐 때 나타나는 애니메이션 */
+    /* 페이지 상단이 아닐 때 나타나는 애니메이션 */
     .slide-in {
       animation: slideDown 0.4s ease-out forwards;
     }
@@ -90,6 +96,7 @@
     }
 
     @media (max-width: 1024px) {
+      .header-placeholder { height: 110px; }
       .header-wrapper { padding: 0 20px; height: 70px; }
       .menu-toggle { display: block; } 
       .logo-text { display: none; } 
@@ -102,10 +109,6 @@
       }
       .nav-links.active { left: 0; }
     }
-
-    /* 배너 사이즈 유지를 위한 상단 패딩 */
-    body { padding-top: 120px; }
-    @media (max-width: 1024px) { body { padding-top: 110px; } }
   </style>
 
   <script>
@@ -121,17 +124,17 @@
       window.addEventListener('scroll', () => {
         const currentScroll = window.pageYOffset;
 
-        // TOP 버튼 노출
+        // TOP 버튼
         if(btn) btn.style.display = (currentScroll > 150) ? 'block' : 'none';
 
         if(header) {
+          // 80px 이상 내려가면 고정 헤더 등장
           if (currentScroll > 80) {
-            // 내리기 시작하면 스르륵 나타나서 "계속 유지"
             if (!header.classList.contains('scrolled')) {
               header.classList.add('scrolled', 'slide-in');
             }
           } else if (currentScroll <= 10) {
-            // 끝까지 올렸을 때만 원래 자리로
+            // 맨 위로 가면 다시 합쳐짐
             header.classList.remove('scrolled', 'slide-in');
           }
         }
@@ -145,6 +148,8 @@
 </head>
 
 <body>
+  <div class="header-placeholder"></div>
+
   <div class="sticky-top" id="mainHeader">
     <div class="top-bar">OFFICIAL WEBSITE OF JOSHUA HONG | UTSA </div>
     <header class="header-wrapper">
