--- a/index.html
+++ b/index.html
@@ -24,28 +24,21 @@
     }
     * { box-sizing: border-box; }
 
-    /* [헤더 지지대] 데스크탑 본문 가려짐 방지 */
-    .header-placeholder {
-      height: 120px;
-      width: 100%;
-      display: block;
-    }
-
-    /* [헤더 설정] */
+    /* [헤더 설정] 공간 변화를 없애기 위해 처음부터 고정 */
     .sticky-top {
-      position: absolute; 
+      position: fixed; /* 처음부터 고정하여 배너 밀림 방지 */
       top: 0; z-index: 1000; width: 100%;
       background: #ffffff;
-      transition: transform 0.4s ease-in-out;
+      transition: all 0.4s ease-in-out;
     }
 
-    /* 스크롤 시 변신: 스르륵 내려와서 고정 */
+    /* 스크롤 시 그림자 추가 */
     .sticky-top.scrolled {
-      position: fixed;
-      transform: translateY(0);
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      transform: translateY(0);
     }
 
+    /* 초기 상태에서만 위로 살짝 숨겼다 나타나게 하고 싶을 때용 (선택사항) */
     .slide-in {
       animation: slideDown 0.4s ease-out forwards;
     }
@@ -94,8 +87,13 @@
       display: none; box-shadow: 0 4px 12px rgba(0,0,0,0.3);
     }
 
+    /* [본문 상단 여백] 헤더 높이만큼 고정 여백 설정 (배너 흔들림 방지 핵심) */
+    .main-wrapper {
+      padding-top: 120px;
+    }
+
     @media (max-width: 1024px) {
-      .header-placeholder { height: 110px; }
+      .main-wrapper { padding-top: 110px; }
       .header-wrapper { padding: 0 20px; height: 70px; }
       .menu-toggle { display: block; } 
       .logo-text { display: none; } 
@@ -125,12 +123,12 @@
         if(btn) btn.style.display = (currentScroll > 150) ? 'block' : 'none';
 
         if(header) {
-          if (currentScroll > 120) {
-            if (!header.classList.contains('scrolled')) {
-              header.classList.add('scrolled', 'slide-in');
-            }
-          } else if (currentScroll <= 10) {
-            header.classList.remove('scrolled', 'slide-in');
+          if (currentScroll > 50) {
+            // 내리기 시작하면 그림자 생기며 고정 상태 강조
+            header.classList.add('scrolled');
+          } else {
+            // 맨 위로 가면 그림자 제거 (자연스럽게 합쳐짐)
+            header.classList.remove('scrolled');
           }
         }
       });
@@ -143,8 +141,6 @@
 </head>
 
 <body>
-  <div class="header-placeholder"></div>
-
   <div class="sticky-top" id="mainHeader">
     <div class="top-bar">OFFICIAL WEBSITE OF JOSHUA HONG | UTSA </div>
     <header class="header-wrapper">
@@ -165,14 +161,16 @@
 
   <button id="fixedTopBtn" onclick="scrollToTop()">TOP</button>
 
-  <div class="profile-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0 15px; box-sizing: border-box;">
-    <div style="text-align: center; margin-bottom: 25px; padding-top: 20px;">
-      <h1 style="font-family: 'Oswald', sans-serif; font-size: 34px; font-weight: 500; color: #0c2340; margin: 0; letter-spacing: 1px; text-transform: uppercase; line-height: 1.1;">
-        JOSHUA HONG
-      </h1>
-      <p style="font-family: 'Oswald', sans-serif; font-size: 16px; color: #666; margin: 10px 0 0 0; font-weight: 400; letter-spacing: 2px;">
-        UTSA MEN'S GOLF
-      </p>
+  <div class="main-wrapper">
+    <div class="profile-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0 15px; box-sizing: border-box;">
+      <div style="text-align: center; margin-bottom: 25px; padding-top: 20px;">
+        <h1 style="font-family: 'Oswald', sans-serif; font-size: 34px; font-weight: 500; color: #0c2340; margin: 0; letter-spacing: 1px; text-transform: uppercase; line-height: 1.1;">
+          JOSHUA HONG
+        </h1>
+        <p style="font-family: 'Oswald', sans-serif; font-size: 16px; color: #666; margin: 10px 0 0 0; font-weight: 400; letter-spacing: 2px;">
+          UTSA MEN'S GOLF
+        </p>
+      </div>
     </div>
   </div>
 </body>
