--- a/index.html
+++ b/index.html
@@ -14,8 +14,38 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
 
+  <script>
+    function toggleMenu() {
+      const nav = document.getElementById('navLinks');
+      if(nav) nav.classList.toggle('active');
+    }
+
+    let lastScroll = 0;
+    window.addEventListener('scroll', () => {
+      const header = document.getElementById('mainHeader');
+      const btn = document.getElementById('fixedTopBtn');
+      const currentScroll = window.pageYOffset;
+
+      // TOP 버튼 노출
+      if(btn) btn.style.display = (currentScroll > 150) ? 'block' : 'none';
+
+      // 헤더 스크롤 로직: 내릴 때 스르륵 나타나고, 맨 위에서만 합쳐짐
+      if(header) {
+        if (currentScroll > 80) {
+          header.classList.add('scrolled');
+        } else {
+          header.classList.remove('scrolled');
+        }
+      }
+      lastScroll = currentScroll;
+    });
+
+    function scrollToTop() {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+  </script>
+
   <style>
-    /* 1. 기본 설정 */
     html, body {
       margin: 0; padding: 0; width: 100%; overflow-x: hidden; 
       font-family: 'Montserrat', sans-serif;
@@ -24,22 +54,18 @@
     }
     * { box-sizing: border-box; }
 
-    /* [헤더 설정] 공간 변화를 없애기 위해 처음부터 고정 */
+    /* [헤더 설정] */
     .sticky-top {
-      position: fixed; /* 처음부터 고정하여 배너 밀림 방지 */
-      top: 0; z-index: 1000; width: 100%;
+      position: relative; /* 초기 상태 */
+      z-index: 1000; width: 100%;
       background: #ffffff;
-      transition: all 0.4s ease-in-out;
     }
 
-    /* 스크롤 시 그림자 추가 */
+    /* 스크롤 시 변신 */
     .sticky-top.scrolled {
+      position: fixed;
+      top: 0;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      transform: translateY(0);
-    }
-
-    /* 초기 상태에서만 위로 살짝 숨겼다 나타나게 하고 싶을 때용 (선택사항) */
-    .slide-in {
       animation: slideDown 0.4s ease-out forwards;
     }
 
@@ -87,13 +113,7 @@
       display: none; box-shadow: 0 4px 12px rgba(0,0,0,0.3);
     }
 
-    /* [본문 상단 여백] 헤더 높이만큼 고정 여백 설정 (배너 흔들림 방지 핵심) */
-    .main-wrapper {
-      padding-top: 120px;
-    }
-
     @media (max-width: 1024px) {
-      .main-wrapper { padding-top: 110px; }
       .header-wrapper { padding: 0 20px; height: 70px; }
       .menu-toggle { display: block; } 
       .logo-text { display: none; } 
@@ -107,37 +127,6 @@
       .nav-links.active { left: 0; }
     }
   </style>
-
-  <script>
-    function toggleMenu() {
-      const nav = document.getElementById('navLinks');
-      if(nav) nav.classList.toggle('active');
-    }
-
-    document.addEventListener('DOMContentLoaded', () => {
-      const header = document.getElementById('mainHeader');
-      const btn = document.getElementById('fixedTopBtn');
-
-      window.addEventListener('scroll', () => {
-        const currentScroll = window.pageYOffset;
-        if(btn) btn.style.display = (currentScroll > 150) ? 'block' : 'none';
-
-        if(header) {
-          if (currentScroll > 50) {
-            // 내리기 시작하면 그림자 생기며 고정 상태 강조
-            header.classList.add('scrolled');
-          } else {
-            // 맨 위로 가면 그림자 제거 (자연스럽게 합쳐짐)
-            header.classList.remove('scrolled');
-          }
-        }
-      });
-    });
-
-    function scrollToTop() {
-      window.scrollTo({ top: 0, behavior: 'smooth' });
-    }
-  </script>
 </head>
 
 <body>
@@ -161,19 +150,18 @@
 
   <button id="fixedTopBtn" onclick="scrollToTop()">TOP</button>
 
-  <div class="main-wrapper">
-    <div class="profile-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0 15px; box-sizing: border-box;">
-      <div style="text-align: center; margin-bottom: 25px; padding-top: 20px;">
-        <h1 style="font-family: 'Oswald', sans-serif; font-size: 34px; font-weight: 500; color: #0c2340; margin: 0; letter-spacing: 1px; text-transform: uppercase; line-height: 1.1;">
-          JOSHUA HONG
-        </h1>
-        <p style="font-family: 'Oswald', sans-serif; font-size: 16px; color: #666; margin: 10px 0 0 0; font-weight: 400; letter-spacing: 2px;">
-          UTSA MEN'S GOLF
-        </p>
-      </div>
+  <div class="profile-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0 15px; box-sizing: border-box;">
+    <div style="text-align: center; margin-bottom: 25px; padding-top: 20px;">
+      <h1 style="font-family: 'Oswald', sans-serif; font-size: 34px; font-weight: 500; color: #0c2340; margin: 0; letter-spacing: 1px; text-transform: uppercase; line-height: 1.1;">
+        JOSHUA HONG
+      </h1>
+      <p style="font-family: 'Oswald', sans-serif; font-size: 16px; color: #666; margin: 10px 0 0 0; font-weight: 400; letter-spacing: 2px;">
+        UTSA MEN'S GOLF
+      </p>
     </div>
   </div>
-</body>
+
+  </body>
 
 
 
