--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     }
     * { box-sizing: border-box; }
 
-    /* [상단 고정 헤더] sticky 적용하여 스크롤 따라오게 설정 */
+    /* [상단 고정 헤더] 원본 구조 유지, sticky 위치만 고정 */
     .sticky-top {
-      position: sticky; /* 이 설정이 상단 고정의 핵심입니다 */
+      position: sticky; 
       top: 0; 
       z-index: 1000; 
       width: 100%;
@@ -171,34 +171,6 @@
       window.scrollTo({ top: 0, behavior: 'smooth' });
     }
   </script>
-
-  <div class="profile-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-    <div style="text-align: center; margin-bottom: 25px; padding-top: 20px;">
-      <h1 style="font-size: 34px; font-weight: 900; color: #0c2340; margin: 0; letter-spacing: -1px; text-transform: uppercase; line-height: 1.1;">
-        JOSHUA HONG
-      </h1>
-      <p style="font-size: 16px; color: #666; margin: 10px 0 0 0; font-weight: 600; letter-spacing: 2px;">
-        UTSA MEN'S GOLF
-      </p>
-    </div>
-
-    <div style="margin-bottom: 40px; border-radius: 20px; overflow: hidden; box-shadow: 0 15px 35px rgba(0,0,0,0.15); background-color: #f8f8f8; position: relative;">
-      <a href="https://drive.google.com/uc?export=view&id=1laJtS3I1EaKcYR5U1Hk0KM-2lG1tRdfI" target="_blank" style="display:block; text-decoration: none;">
-        <img src="https://drive.google.com/thumbnail?id=1laJtS3I1EaKcYR5U1Hk0KM-2lG1tRdfI&sz=w1200" 
-             style="width: 100%; display: block; object-fit: cover; aspect-ratio: 16 / 9; object-position: center 20%;" 
-             alt="Joshua Hong Performance">
-        <div style="position: absolute; bottom: 0; left: 0; right: 0; height: 30%; background: linear-gradient(to top, rgba(0,0,0,0.2), transparent); pointer-events: none;"></div>
-      </a>
-    </div>
-
-    <div class="schedule-section" style="max-width: 900px; margin: 40px auto; padding: 0 15px; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-      <div style="position: relative; text-align: center; margin-bottom: 40px; padding: 20px 0; overflow: hidden;">
-        <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: clamp(40px, 10vw, 80px); font-weight: 900; color: rgba(12, 35, 64, 0.04); white-space: nowrap; z-index: 1; pointer-events: none; letter-spacing: -2px;">
-          UTSA
-        </div>
-      </div>
-    </div>
-  </div>
 
 
 
