--- a/index.html
+++ b/index.html
@@ -23,15 +23,22 @@
     }
     * { box-sizing: border-box; }
 
-    /* [상단 고정 헤더] 원본 구조 유지, sticky 위치만 고정 */
+    /* [상단 고정 헤더] */
     .sticky-top {
-      position: sticky; 
-      top: 0; 
-      z-index: 1000; 
-      width: 100%;
-      background: #ffffff; 
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      position: absolute; top: 0; z-index: 1000; width: 100%;
+      background: #ffffff; box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      transition: transform 0.4s ease-in-out; /* 스르르 효과 */
     }
+
+    /* 스크롤 시 고정 및 나타남 */
+    .sticky-top.fixed {
+      position: fixed;
+      transform: translateY(0);
+    }
+    .sticky-top.hidden {
+      transform: translateY(-100%);
+    }
+
     .top-bar {
       background-color: #F15A22; color: white; text-align: center;
       padding: 10px 0; font-size: 11px;
@@ -121,7 +128,7 @@
 </head>
 
 <body>
-  <div class="sticky-top">
+  <div class="sticky-top" id="mainHeader">
     <div class="top-bar">OFFICIAL WEBSITE OF JOSHUA HONG | UTSA </div>
     <header class="header-wrapper">
       <button class="menu-toggle" onclick="toggleMenu()">☰</button>
@@ -158,13 +165,31 @@
       document.getElementById('navLinks').classList.toggle('active');
     }
 
+    let lastScrollY = window.pageYOffset;
     window.addEventListener('scroll', function() {
       const btn = document.getElementById('fixedTopBtn');
-      if (window.pageYOffset > 100) {
+      const header = document.getElementById('mainHeader');
+      const currentScrollY = window.pageYOffset;
+
+      // TOP 버튼 노출
+      if (currentScrollY > 100) {
         btn.style.display = 'block';
       } else {
         btn.style.display = 'none';
       }
+
+      // 헤더 스크롤 로직 (스르르 기능)
+      if (currentScrollY > 200) {
+        header.classList.add('fixed');
+        if (currentScrollY > lastScrollY) {
+          header.classList.add('hidden'); // 내릴 때 숨김
+        } else {
+          header.classList.remove('hidden'); // 올릴 때 나타남
+        }
+      } else if (currentScrollY <= 10) {
+        header.classList.remove('fixed', 'hidden'); // 최상단 복귀
+      }
+      lastScrollY = currentScrollY;
     });
 
     function scrollToTop() {
@@ -172,6 +197,33 @@
     }
   </script>
 
+<div class="profile-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 130px 15px 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+  
+  <div style="text-align: center; margin-bottom: 25px; padding-top: 20px;">
+  <h1 style="font-size: 34px; font-weight: 900; color: #0c2340; margin: 0; letter-spacing: -1px; text-transform: uppercase; line-height: 1.1;">
+  JOSHUA HONG
+</h1>
+    <p style="font-size: 16px; color: #666; margin: 10px 0 0 0; font-weight: 600; letter-spacing: 2px;">
+      UTSA MEN'S GOLF
+    </p>
+  </div>
+
+<div style="margin-bottom: 40px; border-radius: 20px; overflow: hidden; box-shadow: 0 15px 35px rgba(0,0,0,0.15); background-color: #f8f8f8; position: relative;">
+    <a href="https://drive.google.com/uc?export=view&id=1laJtS3I1EaKcYR5U1Hk0KM-2lG1tRdfI" target="_blank" style="display:block; text-decoration: none;">
+      <img src="https://drive.google.com/thumbnail?id=1laJtS3I1EaKcYR5U1Hk0KM-2lG1tRdfI&sz=w1200" 
+           style="width: 100%; display: block; object-fit: cover; aspect-ratio: 16 / 9; object-position: center 20%;" 
+           alt="Joshua Hong Performance">
+      
+      <div style="position: absolute; bottom: 0; left: 0; right: 0; height: 30%; background: linear-gradient(to top, rgba(0,0,0,0.2), transparent); pointer-events: none;"></div>
+    </a>
+</div>
+
+<div class="schedule-section" style="max-width: 900px; margin: 40px auto; padding: 0 15px; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+  
+  <div style="position: relative; text-align: center; margin-bottom: 40px; padding: 20px 0; overflow: hidden;">
+    <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: clamp(40px, 10vw, 80px); font-weight: 900; color: rgba(12, 35, 64, 0.04); white-space: nowrap; z-index: 1; pointer-events: none; letter-spacing: -2px;">
+      UTSA
+    </div>
 
 
 
