--- a/index.html
+++ b/index.html
@@ -27,19 +27,26 @@
     .sticky-top {
       position: absolute; top: 0; left: 0; z-index: 1000; width: 100%;
       background: #ffffff; box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-      transition: transform 0.5s ease-out, background 0.3s; /* 스르르 내려오는 효과 */
+      transition: all 0.4s ease-in-out; 
     }
 
-    /* 스크롤 시 '폼 나게' 내려와 고정되는 상태 */
+    /* 스크롤 시 '폼 나게' 내려와 고정되는 상태 - 깜빡임 방지 최적화 */
     .sticky-top.scrolled {
       position: fixed;
+      top: 0;
       transform: translateY(0);
-      animation: slideDown 0.5s ease-out;
+      background: rgba(255, 255, 255, 0.98);
+      visibility: visible;
+      opacity: 1;
     }
 
-    @keyframes slideDown {
-      from { transform: translateY(-100%); }
-      to { transform: translateY(0); }
+    /* 상단 복귀 시 자연스러운 전환을 위한 숨김 상태 */
+    .sticky-top.preparing {
+      position: fixed;
+      transform: translateY(-100%);
+      opacity: 0;
+      visibility: hidden;
+      transition: none; /* 위로 올라갈 때는 즉시 대기 */
     }
 
     .top-bar {
@@ -172,11 +179,17 @@
         btn.style.display = 'none';
       }
 
-      // 2. 헤더 '스르르' 제어: 조금만 내려와도 바로 작동하게 50px로 설정
-      if (currentScrollY > 50) {
+      // 2. 헤더 제어: 배너 사진이 끝나는 지점인 600px 이후에 등장
+      if (currentScrollY > 600) {
         header.classList.add('scrolled');
-      } else {
+        header.classList.remove('preparing');
+      } else if (currentScrollY > 150) {
+        // 맨 위로 올라가기 전 미리 숨겨서 합쳐질 때 깜빡임 방지
         header.classList.remove('scrolled');
+        header.classList.add('preparing');
+      } else {
+        // 최상단 도달 시 원래 위치의 헤더가 보이도록 초기화
+        header.classList.remove('scrolled', 'preparing');
       }
     });
 
