--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1,6 +1,6 @@
 <head>
   <link rel="icon" type="image/jpeg" href="https://raw.githubusercontent.com/joshuahayoung/lab/main/images/joshua-hong-logo.jpg">
-<link rel="apple-touch-icon" href="https://raw.githubusercontent.com/joshuahayoung/lab/main/images/joshua-hong-logo.jpg">
+  <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/joshuahayoung/lab/main/images/joshua-hong-logo.jpg">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -23,11 +23,32 @@
     }
     * { box-sizing: border-box; }
 
-    /* [상단 고정 헤더] */
+    /* [상단 헤더 기본 스타일] */
     .sticky-top {
-      position: sticky; top: 0; z-index: 1000; width: 100%;
+      position: absolute; top: 0; left: 0; z-index: 1000; width: 100%;
       background: #ffffff; box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out, visibility 0.4s;
     }
+
+    /* 스크롤 시 '폼 나게' 내려와 고정되는 상태 */
+    .sticky-top.scrolled {
+      position: fixed;
+      top: 0;
+      transform: translateY(0);
+      opacity: 1;
+      visibility: visible;
+      background: rgba(255, 255, 255, 0.98);
+    }
+
+    /* 위로 올라갈 때 우아하게 사라지는 준비 상태 */
+    .sticky-top.preparing {
+      position: fixed;
+      top: 0;
+      transform: translateY(-100%);
+      opacity: 0;
+      visibility: hidden;
+    }
+
     .top-bar {
       background-color: #F15A22; color: white; text-align: center;
       padding: 10px 0; font-size: 11px;
@@ -117,7 +138,7 @@
 </head>
 
 <body>
-  <div class="sticky-top">
+  <div class="sticky-top" id="mainHeader">
     <div class="top-bar">OFFICIAL WEBSITE OF JOSHUA HONG | UTSA</div>
     <header class="header-wrapper">
       <button class="menu-toggle" onclick="toggleMenu()">☰</button>
@@ -156,10 +177,25 @@
 
     window.addEventListener('scroll', function() {
       const btn = document.getElementById('fixedTopBtn');
-      if (window.pageYOffset > 100) {
+      const header = document.getElementById('mainHeader');
+      const currentScrollY = window.pageYOffset;
+
+      // 1. TOP 버튼 제어
+      if (currentScrollY > 100) {
         btn.style.display = 'block';
       } else {
         btn.style.display = 'none';
+      }
+
+      // 2. 헤더 우아한 제어 (300px 기준)
+      if (currentScrollY > 300) {
+        header.classList.add('scrolled');
+        header.classList.remove('preparing');
+      } else if (currentScrollY > 10) { 
+        header.classList.remove('scrolled');
+        header.classList.add('preparing');
+      } else {
+        header.classList.remove('scrolled', 'preparing');
       }
     });
 
@@ -194,6 +230,7 @@
 
 </div>
 
+  
 
   
   
